objects/dataloader3935__c.object
<CustomObject>
    <fields>
        <fullName>AccountDataload__c</fullName>
        <label>AccountDataload</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>dataloader3935s</relationshipLabel>
        <relationshipName>dataloader3935s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3935Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>3935Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>dataloader3935s</relationshipLabel>
        <relationshipName>dataloader3935s</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>permissiontesting1__c</fullName>
        <label>permissiontesting1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>permissiontesting2__c</fullName>
        <label>permissiontesting2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>permissiontesting3__c</fullName>
        <label>permissiontesting3</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <label>dataloader3935</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>dataloader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dataloader3935s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>